--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.6|~3.0",
-        "phpoffice/phpword": "^0.13"
+        "symfony/framework-bundle": "~2.6|~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6",
@@ -23,7 +22,8 @@
         "symfony/class-loader": "~2.6|~3.0",
         "symfony/validator": "~2.6|~3.0",
         "symfony/browser-kit": "~2.6|~3.0",
-        "sensio/framework-extra-bundle": "~2.3|~3.0"
+        "sensio/framework-extra-bundle": "~2.3|~3.0",
+        "phpoffice/phpword": "^0.14|dev-develop"
     },
     "autoload": {
         "exclude-from-classmap": ["/Tests/"],
