--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
     "homepage": "https://github.com/GGGGino",
     "license": "MIT",
     "require": {
-        "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.6|~3.0"
+        "php": ">=5.6|>=7.0",
+        "symfony/framework-bundle": "~2.6|~3.0",
+        "phpoffice/phpword": "^0.14|dev-develop"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6",
@@ -22,8 +23,7 @@
         "symfony/class-loader": "~2.6|~3.0",
         "symfony/validator": "~2.6|~3.0",
         "symfony/browser-kit": "~2.6|~3.0",
-        "sensio/framework-extra-bundle": "~2.3|~3.0",
-        "phpoffice/phpword": "^0.14|dev-develop"
+        "sensio/framework-extra-bundle": "~2.3|~3.0"
     },
     "autoload": {
         "exclude-from-classmap": ["/Tests/"],
