--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/GGGGino",
     "license": "MIT",
     "require": {
-        "php": ">=5.6|>=7.0",
+        "php": ">=5.6",
         "symfony/framework-bundle": "~2.6|~3.0",
         "phpoffice/phpword": "^0.14|dev-develop"
     },
