--- a/.travis.yml
+++ b/.travis.yml
@@ -7,21 +7,11 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
 
 matrix:
-  include:
-    - php: 5.6
-      env: SYMFONY_VERSION="2.8.*@dev symfony/phpunit-bridge:~2.7"
-    - php: 5.6
-      env: SYMFONY_VERSION="3.0.*@dev"
-    - php: hhvm
-      dist: trusty
   allow_failures:
     - php: 7.0
     - php: 7.1
@@ -35,4 +25,4 @@ install:
   - composer install --optimize-autoloader --prefer-source
 
 script:
-  - bin/phpunit --verbose
+  - vendor/bin/phpunit --verbose
