--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,18 @@
             "email": "david.ginanni@gmail.com"
         }
     ],
-    "keywords": ["Office", "Word", "symfony2", "bundle"],
+    "keywords": [
+        "Office",
+        "Word",
+        "symfony2",
+        "bundle"
+    ],
     "homepage": "https://github.com/GGGGino",
     "license": "MIT",
     "require": {
         "php": ">=5.6|>7.0",
         "symfony/framework-bundle": "^3.0|^4.0",
-        "phpoffice/phpword": "^0.14|dev-develop"
+        "phpoffice/phpword": "^0.17|dev-develop"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6",
@@ -26,7 +31,9 @@
         "sensio/framework-extra-bundle": "~2.3|~3.0"
     },
     "autoload": {
-        "exclude-from-classmap": ["/Tests/"],
+        "exclude-from-classmap": [
+            "/Tests/"
+        ],
         "psr-4": {
             "GGGGino\\WordBundle\\": ""
         }
@@ -36,12 +43,11 @@
             "GGGGino\\WordBundle\\": ""
         }
     },
-    
     "extra": {
         "branch-alias": {
             "dev-master": "2.0.x-dev"
         }
-    }, 
+    },
     "config": {
         "bin-dir": "bin"
     }
